@@ -13,8 +13,7 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.List;
-import java.util.Set;
+import java.util.Arrays;
 
 @EnableAutoTableTest
 @SpringBootTest
@@ -32,12 +31,12 @@ public class BindMidTest {
     public void init() {
         Menu menu1 = new Menu().setId("1").setName("菜单1");
         Menu menu2 = new Menu().setId("2").setName("菜单2");
-        menuRepository.saveBatch(List.of(menu1, menu2), 2);
+        menuRepository.saveBatch(Arrays.asList(menu1, menu2), 2);
 
         Role role = new Role().setId(roleId).setName("角色1");
         roleRepository.save(role);
 
-        roleMenuRepository.saveBatch(List.of(
+        roleMenuRepository.saveBatch(Arrays.asList(
                 new RoleMenu().setId("1").setSysMenuId(menu1.getId()).setSysRuleId(roleId),
                 new RoleMenu().setId("2").setSysMenuId(menu2.getId()).setSysRuleId(roleId)
         ), 2);
@@ -52,7 +51,7 @@ public class BindMidTest {
         Role role = roleRepository.getById(roleId);
         Binder.bind(role);
 
-        assert Set.of("菜单1", "菜单2").containsAll(role.getMenuNames());
-        assert role.getMenus().stream().map(Menu::getId).allMatch(Set.of("1", "2")::contains);
+        assert Arrays.asList("菜单1", "菜单2").containsAll(role.getMenuNames());
+        assert role.getMenus().stream().map(Menu::getId).allMatch(Arrays.asList("1", "2")::contains);
     }
 }
